--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,8 @@
 /node_modules
 /.pnp
 .pnp.js
-
+.vercel
+api
 # testing
 /coverage
 
@@ -21,3 +22,4 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.vercel
