--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "petgram",
   "version": "0.1.0",
+  "homepage": "https://santiago-beeb.github.io/petygram",
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.7.10",
@@ -8,8 +9,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
+    "intersection-observer": "^0.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
@@ -17,6 +20,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "vercel-build": "npm run build",
     "start": "react-scripts start",
     "build": "react-scripts build",
